Closed
Bug 1130888
Opened 11 years ago
Closed 11 years ago
SVG text on path fill color does not render properly when preceded by RTL text
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
mozilla38
People
(Reporter: bridgeproductions, Assigned: longsonr)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
735 bytes,
text/html
|
Details | |
|
2.57 KB,
patch
|
heycam
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta-
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20100101 Firefox/20.0
Build ID: 20150202183609
Steps to reproduce:
Since updating Firefox to version 35 from the previous version 34 some features in a website I developed are not working as before.
When updating to the newest 36 version this problem still occurs, and of course I double checked and reverted back to 34 to confirm.
Actual results:
The problem itself is that SVG text on path fill color doesn’t respond and for some reason renders as white.
I don’t know if it helps that I’ll add more details, but anyway in my case the SVG text on path is also rotating when mouse over (CSS3 transitions and transforms).
By the way, I chose to rotate text and not code a SMIL animation (SVG text along an arbitrary path animation) as it doesn’t work with Firefox (http://css-tricks.com/guide-svg-animations-smil/).
Expected results:
The website that I’m referring to is: http://www.gaaal.com/
The SVG tags are located in: html/body/main/div/a
In each a tag there are two SVG tags that are in position absolute to the containing div.
Of course when checking the website with other browsers fill color rendering is working as it supposed to.
| Reporter | ||
Updated•11 years ago
|
Hardware: x86_64 → Other
| Reporter | ||
Updated•11 years ago
|
Summary: SVG fill color does not render properly (SVG+CSS3 Transitions) → SVG text on path fill color does not render properly (SVG+CSS3 Transitions)
| Assignee | ||
Comment 1•11 years ago
|
||
A couple of things would help a lot. A reduced testcase I.e. the smallest code necessary to reproduce the problem rather than your whole website ideally attached to this bug using the Add an attachement link above.
Secondly using moz-regression http://mozilla.github.io/mozregression/ to find out exactly when things changed.
Do you think you could do either of those things?
Flags: needinfo?(bridgeproductions)
| Assignee | ||
Comment 2•11 years ago
|
||
| Assignee | ||
Comment 3•11 years ago
|
||
Removing the span makes the textPath change colour.
| Assignee | ||
Updated•11 years ago
|
Keywords: regressionwindow-wanted
Comment 4•11 years ago
|
||
Pushlog:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=cdbdea7d3705&tochange=f2003d572d53
Triggered by:
f2003d572d53 Robert Longson — Bug 1078031 - get rid of renderMode. r=jwatt
Blocks: 1078031
Keywords: regressionwindow-wanted → regression
Updated•11 years ago
|
Status: UNCONFIRMED → NEW
status-firefox35:
--- → affected
status-firefox36:
--- → affected
status-firefox37:
--- → affected
status-firefox38:
--- → affected
status-firefox-esr31:
--- → unaffected
Ever confirmed: true
| Assignee | ||
Updated•11 years ago
|
Component: Untriaged → SVG
Product: Firefox → Core
| Assignee | ||
Updated•11 years ago
|
Flags: needinfo?(bridgeproductions)
OS: Windows 7 → All
Hardware: Other → All
| Assignee | ||
Updated•11 years ago
|
Summary: SVG text on path fill color does not render properly (SVG+CSS3 Transitions) → SVG text on path fill color does not render properly when preceded by RTL text
| Assignee | ||
Comment 5•11 years ago
|
||
Assignee: nobody → longsonr
Attachment #8561707 -
Flags: review?(cam)
Comment 6•11 years ago
|
||
Comment on attachment 8561707 [details] [diff] [review]
text.txt
Review of attachment 8561707 [details] [diff] [review]:
-----------------------------------------------------------------
::: layout/reftests/svg/textPath-05.html
@@ +4,5 @@
> + <meta http-equiv="content-type" content="text/html; charset=UTF-8">
> +</head>
> +<body>
> + <span style="display:none;"> דניאל גל</span>
> + <svg width="100%" height="100%">
Trailing space.
Attachment #8561707 -
Flags: review?(cam) → review+
| Assignee | ||
Comment 7•11 years ago
|
||
| Assignee | ||
Comment 8•11 years ago
|
||
Flags: in-testsuite+
Comment 9•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
| Assignee | ||
Comment 10•11 years ago
|
||
Comment on attachment 8561707 [details] [diff] [review]
text.txt
Approval Request Comment
[Feature/regressing bug #]: bug 1078031
[User impact if declined]: Some SVG text displayed in the wrong colour
[Describe test coverage new/current, TreeHerder]: includes a new reftest
[Risks and why]: low (change is small and similar to code in nsTextFrame)
[String/UUID change made/needed]: none
Attachment #8561707 -
Flags: approval-mozilla-beta?
Attachment #8561707 -
Flags: approval-mozilla-aurora?
Comment 11•11 years ago
|
||
Comment on attachment 8561707 [details] [diff] [review]
text.txt
We already shipped 35 with this bug. This is really late in the 36 cycle and I saw enough regressions in the SVG code to not accept last minute changes in the code.
Attachment #8561707 -
Flags: approval-mozilla-beta?
Attachment #8561707 -
Flags: approval-mozilla-beta-
Attachment #8561707 -
Flags: approval-mozilla-aurora?
Attachment #8561707 -
Flags: approval-mozilla-aurora+
Updated•11 years ago
|
Comment 12•11 years ago
|
||
Comment 13•11 years ago
|
||
status-b2g-v2.2:
--- → fixed
status-b2g-master:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•