Bug 1130888 - SVG text on path fill color does not render properly when preceded by RTL text. r=heycam